syntax = "proto3";

package room;

option go_package = "internal/pb/room;room";

import "google/protobuf/timestamp.proto";

service RoomService {
    rpc CreateRoom(CreateRoomParamsRequest) returns (CreateRoomParamsResponse);
}

message CreateRoomParamsRequest {
    string user_uuid = 1;
    string name = 2;
    optional string password = 3;
    int32 max_players = 4;
    bool is_public = 5;
}

message CreateRoomParamsResponse {
    string id = 1;
    string name = 2;
    string owner_id = 3;
    string owner_name = 4;
    int32 max_players = 5;
    bool is_public = 6;
    google.protobuf.Timestamp created_at = 7;
}